Fixed some layout issues

--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -7,7 +7,6 @@
     flex-direction: column;
     background-color: white;
     font-family: 'Poppins', sans-serif;
-    padding-left: 2rem;
     min-width: 430px;
     gap: 3rem;
 }
